@@ -10,25 +10,19 @@ import io.cucumber.java.en.When;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 public class CalculatorSteps {
+
+//	static final Logger log = getLogger(lookup().lookupClass());
 
 	private ArrayList<Expression> params;
 	private Operation op;
 	private Calculator c;
 	private Operation compositeExpression;
 
-
-	// Déclaration des variables pour la conversion d'angles
-	private double angleDegrees;
-	private double angleRadians;
-
-
 	@Before
-	public void resetMemoryBeforeEachScenario() {
-		params = new ArrayList<>();
+    public void resetMemoryBeforeEachScenario() {
+		params = null;
 		op = null;
 		compositeExpression = null;
 	}
@@ -40,96 +34,99 @@ public class CalculatorSteps {
 
 	@Given("an integer operation {string}")
 	public void givenAnIntegerOperation(String s) {
-		// Initialise l'opération en fonction de la chaîne de caractères (+, -, *, /)
+		// Write code here that turns the phrase above into concrete actions
+		params = new ArrayList<>(); // create an empty set of parameters to be filled in
 		try {
 			switch (s) {
-				case "+" -> op = new Plus(params);
-				case "-" -> op = new Minus(params);
-				case "*" -> op = new Times(params);
-				case "/" -> op = new Divides(params);
-				default -> fail("Invalid operation: " + s);
+				case "+"	->	op = new Plus(params);
+				case "-"	->	op = new Minus(params);
+				case "*"	->	op = new Times(params);
+				case "/"	->	op = new Divides(params);
+				default		->	fail();
 			}
 		} catch (IllegalConstruction e) {
-			fail("Failed to construct operation: " + s);
+			fail();
 		}
 	}
 
+	// The following example shows how to use a DataTable provided as input.
+	// The example looks slightly complex, since DataTables can take as input
+	//  tables in two dimensions, i.e. rows and lines. This is why the input
+	//  is a list of lists.
 	@Given("the following list of integer numbers")
 	public void givenTheFollowingListOfNumbers(List<List<String>> numbers) {
 		params = new ArrayList<>();
-		// Convertir les chaînes en IntegerValue et les ajouter à la liste des paramètres
-		numbers.getFirst().forEach(n -> params.add(new MyNumber(new IntegerValue(Integer.parseInt(n)))));
+		// Since we only use one line of input, we use get(0) to take the first line of the list,
+		// which is a list of strings, that we will manually convert to integers:
+		numbers.get(0).forEach(n -> params.add(new MyNumber(Integer.parseInt(n))));
+	    params.forEach(n -> System.out.println("value ="+ n));
+		op = null;
 	}
 
+	// The string in the Given annotation shows how to use regular expressions...
+	// In this example, the notation d+ is used to represent numbers, i.e. nonempty sequences of digits
 	@Given("^the sum of two numbers (\\d+) and (\\d+)$")
+	// The alternative, and in this case simpler, notation would be:
+	// @Given("the sum of two numbers {int} and {int}")
 	public void givenTheSum(int n1, int n2) {
-		// Créer une opération de somme avec les deux entiers, chaque entier est converti en IntegerValue
-		params = new ArrayList<>();
-		params.add(new MyNumber(new IntegerValue(n1)));
-		params.add(new MyNumber(new IntegerValue(n2)));
 		try {
-			op = new Plus(params);
-		} catch (IllegalConstruction e) {
-			fail("Failed to create the sum operation");
-		}
+			params = new ArrayList<>();
+		    params.add(new MyNumber(n1));
+		    params.add(new MyNumber(n2));
+		    op = new Plus(params);}
+		catch(IllegalConstruction e) { fail(); }
 	}
 
 	@Then("^its (.*) notation is (.*)$")
-	public void thenItsNotationIs(String notation, String expected) {
-		// Valider que la notation de l'opération correspond à la chaîne attendue
-		try {
-			if (notation.equals("PREFIX") || notation.equals("POSTFIX") || notation.equals("INFIX")) {
-				op.notation = Notation.valueOf(notation);
-				assertEquals(expected, op.toString());
-			} else {
-				fail(notation + " is not a correct notation!");
-			}
-		} catch (IllegalArgumentException e) {
-			fail("Invalid notation provided: " + notation);
+	public void thenItsNotationIs(String notation, String s) {
+		if (notation.equals("PREFIX")||notation.equals("POSTFIX")||notation.equals("INFIX")) {
+			op.notation = Notation.valueOf(notation);
+			assertEquals(s, op.toString());
 		}
+		else fail(notation + " is not a correct notation! ");
 	}
 
 	@When("^I provide a (.*) number (\\d+)$")
 	public void whenIProvideANumber(String s, int val) {
-		// Ajouter un nouveau nombre à l'opération, chaque nombre est converti en IntegerValue
+		//add extra parameter to the operation
 		params = new ArrayList<>();
-		params.add(new MyNumber(new IntegerValue(val)));
+		params.add(new MyNumber(val));
 		op.addMoreParams(params);
 	}
 
 	@Then("^the (.*) is (\\d+)$")
 	public void thenTheOperationIs(String s, int val) {
 		try {
-			// En fonction de la chaîne, choisir l'opération appropriée
 			switch (s) {
-				case "sum" -> op = new Plus(params);
-				case "product" -> op = new Times(params);
-				case "quotient" -> op = new Divides(params);
-				case "difference" -> op = new Minus(params);
-				default -> fail("Invalid operation type: " + s);
+				case "sum"			->	op = new Plus(params);
+				case "product"		->	op = new Times(params);
+				case "quotient"		->	op = new Divides(params);
+				case "difference"	->	op = new Minus(params);
+				default -> fail();
 			}
-			int result = c.eval(op).getValueInt();  // Récupérer la valeur de l'objet IntegerValue
-			assertEquals(val, result);  // Vérifier que le résultat de l'opération correspond à la valeur attendue
+			assertEquals(val, c.eval(op));
 		} catch (IllegalConstruction e) {
-			fail("Failed to construct the operation: " + s);
+			fail();
 		}
 	}
 
+	@Then("the operation evaluates to {int}")
+	public void thenTheOperationEvaluatesTo(int val) {
+		assertEquals(val, c.eval(op));
+	}
+
+	// Handling the new composite expression
 	@Given("a composite expression consisting of the addition of {int} and {int} and multiplication by {int}")
 	public void aCompositeExpressionConsistingOfTheAdditionOfAndAndMultiplicationBy(int arg0, int arg1, int arg2) throws IllegalConstruction {
-		// Créer une expression composite : (arg0 + arg1) * arg2
-		Expression addition = new Plus(List.of(new MyNumber(new IntegerValue(arg0)), new MyNumber(new IntegerValue(arg1))));
-		compositeExpression = new Times(List.of(addition, new MyNumber(new IntegerValue(arg2))));
+		// Create the components of the composite expression
+		Expression addition = new Plus(List.of(new MyNumber(arg0), new MyNumber(arg1)));
+        compositeExpression = new Times(List.of(addition, new MyNumber(arg2))); // Store the full composite expression
 	}
 
 	@When("I set the notation to {string}")
 	public void iSetTheNotationToNotation(String notation) {
 		if (compositeExpression != null) {
-			try {
-				compositeExpression.notation = Notation.valueOf(notation); // Définir la notation
-			} catch (IllegalArgumentException e) {
-				fail("Invalid notation: " + notation);
-			}
+			compositeExpression.notation   = Notation.valueOf(notation); // Set the notation
 		} else {
 			fail("Composite expression is not initialized.");
 		}
@@ -138,165 +135,11 @@ public class CalculatorSteps {
 	@Then("the expression displayed in {string} notation is {string}")
 	public void theExpressionDisplayedInNotationNotationIsExpected(String notation, String expected) {
 		if (compositeExpression != null) {
-			try {
-				compositeExpression.notation = Notation.valueOf(notation); // Définir la notation
-				assertEquals(expected, compositeExpression.toString()); // Vérifier la sortie attendue
-			} catch (IllegalArgumentException e) {
-				fail("Invalid notation: " + notation);
-			}
+			compositeExpression.notation   = Notation.valueOf(notation); // Set the notation
+			assertEquals(expected, compositeExpression.toString()); // Validate the expected output
 		} else {
 			fail("Composite expression is not initialized.");
 		}
 	}
-
-	// Nouvelle étape pour les opérations sur des réels
-	@Given("a real operation {string}")
-	public void givenARealOperation(String s) {
-		params = new ArrayList<>();
-		try {
-			switch (s) {
-				case "+" -> op = new Plus(params);
-				case "-" -> op = new Minus(params);
-				case "*" -> op = new Times(params);
-				case "/" -> op = new Divides(params);
-				default -> fail("Invalid real operation: " + s);
-			}
-		} catch (IllegalConstruction e) {
-			fail("Failed to construct real operation: " + s);
-		}
-	}
-
-	// Nouvelle étape pour les opérations sur les nombres complexes
-	@Given("a complex operation {string}")
-	public void givenAComplexOperation(String s) {
-		params = new ArrayList<>();
-		try {
-			switch (s) {
-				case "+" -> op = new Plus(params);
-				case "-" -> op = new Minus(params);
-				case "*" -> op = new Times(params);
-				case "/" -> op = new Divides(params);
-				default -> fail("Invalid complex operation: " + s);
-			}
-		} catch (IllegalConstruction e) {
-			fail("Failed to construct complex operation: " + s);
-		}
-	}
-
-	@When("I provide a first real number {double}")
-	public void whenIProvideAFirstRealNumber(double val) {
-		op.addMoreParams(List.of(new MyNumber(new RealValue(val, 6))));
-	}
-
-	@When("I provide a second real number {double}")
-	public void whenIProvideASecondRealNumber(double val) {
-		op.addMoreParams(List.of(new MyNumber(new RealValue(val, 6))));
-	}
-
-	private void provideComplexNumber(String complexStr) {
-		ComplexValue cv = parseComplex(complexStr);
-		op.addMoreParams(List.of(new MyNumber(cv)));
-	}
-
-	@When("I provide a first complex number {string}")
-	public void whenIProvideAFirstComplexNumber(String complexStr) {
-		provideComplexNumber(complexStr);
-	}
-
-	@When("I provide a second complex number {string}")
-	public void whenIProvideASecondComplexNumber(String complexStr) {
-		provideComplexNumber(complexStr);
-	}
-
-	@Then("the operation evaluates to {double}")
-	public void thenTheOperationEvaluatesToDouble(double expected) {
-		NumericValue result = c.eval(op);
-		System.out.println(result.getClass());
-		System.out.println(result);
-
-
-		double actual;
-		if (result instanceof RealValue) {
-			actual = ((RealValue) result).getValue().doubleValue();
-		}
-		else if (result instanceof IntegerValue) {
-			actual = ((IntegerValue) result).getValue();
-		}
-
-		else if (result instanceof RationalValue) {
-			actual = ((IntegerValue) result).getValue();
-		}
-
-		else {
-			fail("Expected numeric result but got: " + result.getClass().getSimpleName());
-			return;
-		}
-
-		assertEquals(expected, actual, 0.0001); // correct usage with numeric delta
-	}
-
-
-	private ComplexValue parseComplex(String s) {
-		// Nettoyage de la chaîne
-		s = s.replaceAll("\\s+", "");
-		// Normalisation des combinaisons de signes
-		s = s.replace("+-", "-").replace("-+", "-").replace("++", "+");
-
-		// Expression régulière pour capturer la partie réelle et imaginaire
-		Pattern pattern = Pattern.compile("^([+-]?\\d+(?:\\.\\d+)?)([+-]\\d+(?:\\.\\d+)?)i$");
-		Matcher matcher = pattern.matcher(s);
-		if (!matcher.matches()) {
-			fail("Invalid complex number format: " + s);
-		}
-
-		double realPart = Double.parseDouble(matcher.group(1));
-		double imagPart = Double.parseDouble(matcher.group(2));
-
-		return new ComplexValue(realPart, imagPart);
-	}
-
-	// Étapes pour la conversion d'angle
-	@Given("I have an angle of {int} degrees")
-	public void iHaveAnAngleOfDegrees(int degrees) {
-		angleDegrees = degrees;
-	}
-
-	@When("I convert the angle to radians")
-	public void iConvertTheAngleToRadians() {
-		angleRadians = calculator.util.AngleConverter.degreesToRadians(angleDegrees);
-	}
-
-	@Then("the result should be {string}")
-	public void thenTheResultShouldBeString(String expected) {
-		// Comparaison par chaîne de caractères
-		assertEquals(expected, Double.toString(angleRadians));
-	}
-
-	@Then("the result should be {double}")
-	public void thenTheResultShouldBeDouble(double expected) {
-		assertEquals(expected, angleRadians, 1e-9);
-	}
-
-
-	@Then("the operation evaluates to {string}")
-	public void thenTheOperationEvaluatesToComplexString(String expected) {
-		NumericValue result = c.eval(op);
-		if (!(result instanceof ComplexValue)) {
-			fail("Expected result to be a ComplexValue but got: " + result.getClass().getSimpleName());
-		}
-
-		// Remove spaces and normalize both expected and actual strings
-		String actual = normalizeComplex(((ComplexValue) result).toString().replace(" ", ""));
-		String normalizedExpected = normalizeComplex(expected.replace(" ", ""));
-
-		assertEquals(normalizedExpected, actual);
-	}
-
-	private String normalizeComplex(String complex) {
-		// Remove trailing zeroes and ".0" without causing backtracking issues
-		return complex.replaceAll("(\\d+\\.\\d*?)0+(?=\\D|$)", "$1")
-				.replaceAll("\\.0+(?=\\D|$)", "");
-	}
-
 
 }
